# mscs

./: .gitignore  CMakeLists.txt  Mscs.pro  Mscs.pro.user.7864435  Mscs.pro.user.9a4bfb8  Mscs.pro1  cellmodel.cpp  cellmodel.ui  mysrc.qrc  setcelldialog.cpp  setcelldialog.h  setcelldialog.ui  setcelldialog1.ui  tspara.h
forms/: aboutdialog.ui  analysistype.ui  cellsolveroption.ui  mainwindow.ui  materiel.ui  meshpara.ui  progress_dialog.ui  setcelldialog.ui
resources/: Mscs.qrc
resources/icons/: README.md
sample/: .data.dat.swp  .dataEllipPara.dat.swp  cube6.bdf.vtu
src/: mscs_main.cpp  mylogger.cpp  mylogger.h
src/elastic/: AnalyticalSolution.cpp  AnalyticalSolution.h  BeamSecShape.cpp  BeamSecShape.h  CMCell.cpp  CMCell.h  CanXBeamConZMomAnaSol.cpp  CanXBeamConZMomAnaSol.h  CanYBeamConXMomAnaSol.cpp  CanYBeamConXMomAnaSol.h  CanZBeamConYMomAnaSol.cpp  CanZBeamConYMomAnaSol.h  EllipseGen.cpp  EllipseGen.h  EllipseMade.cpp  EllipseMade.h  EllipseSurface.cpp  EllipseSurface.h  Fem.cpp  Fem.h  FixRodXTenAnaSol.cpp  FixRodXTenAnaSol.h  FixRodXTwistAnaSol.cpp  FixRodXTwistAnaSol.h  FixRodYTenAnaSol.cpp  FixRodYTenAnaSol.h  FixRodYTwistAnaSol.cpp  FixRodYTwistAnaSol.h  FixRodZTenAnaSol.cpp  FixRodZTenAnaSol.h  FixRodZTwistAnaSol.cpp  FixRodZTwistAnaSol.h  Gauss.cpp  Gauss.h  Geometry.cpp  Geometry.h  GloStiffMatrix.cpp  GloStiffMatrix.h  Gloloaded_vector.cpp  Gloloaded_vector.h  (+26 more)
src/gui/: aboutdialog.cpp  analysistype.cpp  analysistype.h  cellmodel.h  cellsolveroption.cpp  cellsolveroption.h  mainwindow.cpp  mainwindow.h  materiel.cpp  materiel.h  meshpara.cpp  meshpara.h  mylogger.h  pmmesher.cpp  pmmesher.h  progress_dialog.cpp  progress_dialog.h  qstream.h  setcelldialog.cpp  setcelldialog.h  sotsinterface.cpp  sotsinterface.h  tspara.cpp  tspara.h  vtkviewer.cpp  vtkviewer.h
src/pmcell/: CMCell.cpp  CMCell.h  EllipseGen.cpp  EllipseGen.h  EllipseMade.cpp  EllipseMade.h  EllipseSurface.cpp  EllipseSurface.h  Fem.cpp  Fem.h  Geometry.cpp  Geometry.h  Hns.cpp  Hns.h  Mesher.cpp  Mesher.h  PCMCell.cpp  PCMCell.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h
